bug fixing buttons trying to center icons on mobile

--- a/styles/tabs-nav.css
+++ b/styles/tabs-nav.css
@@ -619,6 +619,11 @@ footer a:visited {
   text-transform: capitalize;
 }
 
+.list-btn img {
+  width: 32px;
+  margin: 0 auto;
+}
+
 /* 
       ==============
       ** Sausages **
